@@ -10,8 +10,8 @@
   <string id="30006">Please contact the plugin author</string>
   <string id="30007">Unable to get games list</string>
   <string id="30008">at</string>
-  <string id="30009">Week of </string>
-  <string id="30010">Games</string>
+  <string id="30009">Completed Games</string>
+  <string id="30010">Live Games</string>
   <string id="30011">Full Game</string>
   <string id="30012">Condensed Game</string>
   <string id="30013">User Name</string>
