@@ -1,3 +1,7 @@
+[B]Version 1.15.1[/B]
+
+- separate live and completed games
+
 [B]Version 1.15.0[/B]
 
 - update for the 2015 API
